--- a/style.css
+++ b/style.css
@@ -1,3 +1,209 @@
-.italic {
-    font-style: italic
+*{
+    padding: 0;  
+    margin: 0;
+    border: 0;
+  }
+  *,*:before,*:after{
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing:  border-box;
+  box-sizing: border-box
+  }
+  :focus,:active{outline: none;}
+  a:focus,a:active{outline: none;}
+  
+  nav, footer, header, aside{display: block;}
+  
+  html,body{
+      height: 100%;
+      width: 100%;
+      font-size: 100%;
+      line-height: 1;
+      font-size: 14px;
+      -ms-text-size-adjust: 100%;
+      -moz-text-size-adjust: 100%;
+      -webkit-text-size-adjust: 100%;
+  }
+  input,button,textarea{font-family: inherit;}
+  
+  input::-ms-clear{display: none;}
+  button{cursor: pointer;}
+  button::-moz-focus-inner {padding: 0; border: 0;}
+  a, a:visited{text-decoration: none;}
+  a:hover{text-decoration: none;}
+  ul li{list-style: none;}
+  img{vertical-align: top;}
+  
+  h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
+  
+  body{
+    font-family: Arial, "Helvetica-Neue", Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+
+  .wrapper{
+    min-height: 100%;
+    overflow: hidden;    
+  }
+
+  .header{
+    height: 80px;
+    background-color: #2F4F4F
+  }
+
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .nav{
+
+  }
+
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .nav-list li a {
+    color: #ffffff;
+  }
+
+  .nav-list li a:hover {
+    text-decoration: underline;
+    color: LightGrey;
+    text-decoration: none;
+  }
+
+ 
+
+  .nav-list li {
+    padding: 30px 40px 0px 0px;
+    font-size: 16px;
+  }
+
+  .sasha {}
+
+  .sasha__row {  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .sasha__image {
+    margin: 20px 0px 0px 200px;
+  
+  }
+
+  .sasha__image img {
+    width: 200px;
+    border-radius: 100px 100px 100px 100px;
+  }
+
+  .sasha__title{
+    margin: 0px 200px 0px 0px;
+ }
+
+.sasha__name{
+  margin: 0px 0px 5px 0px;
+  font-size: 28px;
 }
+
+.sasha__underline{
+  flex-grow: 1;
+  padding: 0px 0px 60px 45px;
+}
+
+.sasha__skills{
+  padding: 0px 0px 0px 20px;
+  font-size: 16px;
+}
+
+.block__row{
+  margin: 20px 0px 0px 0px;
+  background-color: #2F4F4F;
+  color: #2F4F4F;
+  font-size: 5px;
+}
+
+.main{}
+
+.main__row{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main__title{
+  margin: 20px 0px 0px 20px;
+}
+
+.main__contacts{
+  font-size: 18px;
+}
+
+.main__list{
+  padding: 10px 0px 0px;
+}
+
+.main__list li{
+  padding: 10px 0px 0px 0px;
+  font-size: 14px;
+}
+
+
+.main__title2{
+  margin: 10px 500px 100px 0px;
+  font-size: 18px;
+}
+
+
+  .footer {
+    padding: 10px 0;
+    background-color: #2F4F4F;
+  }
+
+  .footer__row {    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer__text {
+    margin: 0px 0px 0px 40px;
+    font-size: 14px;
+    color: #ffffff;
+  }
+
+
+
+  .footer__text2 {
+    flex-grow: 1;
+    margin: 0px 0px 0px 20px;
+  }
+
+
+  .footer__text2 a {
+    font-size: 14px;
+    color: #ffffff;
+  }
+
+  .footer__text2 a:hover {
+    text-decoration: underline;
+    color: LightGrey;
+    text-decoration: none;
+  }
+
+  .footer__image {
+    margin: 0px 60px 0px 0px;
+  }
+
+
+  .footer__image a img { 
+    width: 80px;
+  }
+
+
