--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
       -moz-text-size-adjust: 100%;
       -webkit-text-size-adjust: 100%;
   }
+
+
   input,button,textarea{font-family: inherit;}
   
   input::-ms-clear{display: none;}
@@ -35,6 +37,10 @@
   
   h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
   
+  html {
+    scroll-behavior: smooth; 
+  }
+
   body{
     font-family: Arial, "Helvetica-Neue", Helvetica, sans-serif;
     display: flex;
@@ -42,13 +48,10 @@
     justify-content: space-between;
   }
 
-
   .wrapper{
-    min-height: 100%;
-    overflow: hidden;    
   }
-
-  .header{
+    
+  header{
     height: 80px;
     background-color: #2F4F4F;
   }
@@ -58,14 +61,18 @@
     margin: 0 auto;
   }
 
-  .nav{
-
+   nav {
   }
 
   .nav-list {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    padding: 10px 0px 0px 0px;
+  }
+
+  .nav-list {
+    list-style: none;
   }
 
   .nav-list li a {
@@ -76,55 +83,68 @@
     text-decoration: underline;
     color: LightGrey;
     text-decoration: none;
+    transition: color 0.5s;
   }
 
- 
+  .nav-link {
+    padding: 40px 40px 0px 0px;
+    line-height: 50px;
+  }
 
   .nav-list li {
-    padding: 30px 40px 0px 0px;
     font-size: 16px;
   }
 
-  .sasha {}
+  main {}
 
   .sasha__row {  
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    padding: 20px 0px 0px 0px;
   }
 
   .sasha__image {
-    margin: 20px 0px 0px 200px;
+    padding: 20px 0px 0px 80px;
+  }
   
+  .image{
+    
   }
 
   .sasha__image img {
-    width: 200px;
-    border-radius: 100px 100px 100px 100px;
+    max-width: 200px;
+    border-radius: 100px;
   }
 
-  .sasha__title{
-    margin: 0px 200px 0px 0px;
+  .sasha__title {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .title {
+    display: flex;
+    align-items: center;
+    
+    padding: 50px 0px 0px 40px;
   }
 
   .sasha__name{
-    margin: 0px 0px 5px 0px;
+    padding: 0px 0px 5px 0px;
     font-size: 28px;
   }
 
   .sasha__underline{
-    flex-grow: 1;
-    padding: 0px 0px 60px 45px;
+    padding: 0px 10px 60px 0px;
   }
 
   .sasha__skills{
-    padding: 0px 0px 0px 20px;
     font-size: 16px;
   }
 
   .block__row{
     margin: 20px 0px 0px 0px;
-    background-color:  #A9A9A9;
+    background-color: #A9A9A9;
     color: #A9A9A9;
     font-size: 5px;
   }
@@ -134,15 +154,14 @@
   .main__row{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    padding: 20px 0px 0px 20px;
   } 
 
   .main__title{
-    padding: 0px 0px 0px 50px;
+    padding: 0px 0px 0px 20px;
   }
 
   .main__contacts{
-    padding: 20px 0px 0px 0px;
     font-size: 18px;
   }
 
@@ -163,20 +182,36 @@
   }
 
   .main__list li img{
-    width: 13px;
+    max-width: 13px;
+  }
+
+  .main__title1{
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    color: #ffffff;
+   
   }
 
   .main__title2{
-    width: 625px;
-    padding: 0px 0px 30px 0px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+   
+  .title2{
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
   }
 
   .summary{
-    padding: 0px 0px 20px 0px;
+    padding: 0px 0px 20px 10px;
     font-size: 18px;
   }
 
   .summary2{
+    padding: 0px 0px 0px 10px;
     font-size: 14px;
     color: #2F4F4F;
   }
@@ -218,7 +253,7 @@
   }
 
   .main2__title{
-     padding: 0px 0px 0px 50px;
+     padding: 0px 0px 0px 40px;
      font-size: 18px;
   }
 
@@ -238,7 +273,7 @@
   }
 
   .main2__list li img{
-    width: 13px;
+    max-width: 13px;
   }
 
   .main2__list li span{
@@ -246,10 +281,23 @@
     color: #2F4F4F;
   }
 
+
+  .main2__title1{
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    color: #ffffff;
+  }
+
   .main2__title2{
-     width: 625px;
-     height: 180px;
-     padding: 0px 0px 40px 0px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .title2{
+    display: flex;
+    align-items: flex-start;
   }
 
   .code{
@@ -328,7 +376,7 @@
 
   .main3__title2{
     padding: 20px 0px 0px 0px;
-    width: 625px;
+    max-width: 625px;
     height: 180px;
   }
 
@@ -381,46 +429,35 @@
   } 
 
   .main4__title{
-    padding: 20px 0px 0px 0px;
+    padding: 20px 0px 0px 50px;
   }
 
-  .main4__courses{
-    padding: 20px 0px 0px 0px;
+  .main4__education{
     font-size: 18px;
   }
 
   .main4__list{
-    padding: 10px 0px 0px 0px;
+   padding: 20px 0px 0px 0px;
   }
 
   .main4__list li{
-    padding: 10px 0px 0px 0px;
     font-size: 14px;
     font-weight: bold;
     color: #2F4F4F;
   }
 
-  .main4__list li span{
-    font-weight: normal;
-    color: #2F4F4F;
-  }
-
-  .main4__list li img{
-    width: 13px;
-  }
-
   .main4__title2{
     padding: 20px 0px 0px 0px;
-    width: 625px;
+    max-width: 625px;
     height: 180px;
   }
 
-  .projects{
+  .english{
     font-size: 18px;
   }
  
 
-  .projects2{
+  .english2{
     padding: 15px 0px 0px 0px;
     text-align: start;
     font-size: 14px;
@@ -435,6 +472,12 @@
   .footer {
     padding: 10px 0;
     background-color: #2F4F4F;
+  }
+
+  
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
   }
 
   .footer__row {    
@@ -466,6 +509,7 @@
     text-decoration: underline;
     color: LightGrey;
     text-decoration: none;
+    transition: color 0.5s;
   }
 
   .footer__image {
@@ -478,3 +522,87 @@
   }
 
 
+  /*   @media (max-width:1440px){
+    .container{
+      max-width: 970px;
+    }
+  }
+  
+  @media (max-width:992px){
+    .container{
+      max-width: 750px;
+    }
+  } */
+  
+  @media (max-width:767px){
+     
+    .sasha__row {  
+      flex-direction: column;
+  
+    }
+    .sasha__image {
+      padding: 20px 0px 0px 20px;
+    }
+
+    .sasha__title {
+      padding: 10px 0px 0px 10px;
+    }
+    .title {
+      display: flex;
+      align-items: flex-start;
+    }
+    .sasha__underline{
+      padding: 0px 0px 0px 40px;
+    }
+    .sasha__skills{
+      padding: 40px 0px 0px 15px;
+    }
+     
+   
+    .main__row{
+      flex-direction: column;
+      padding-left: 10px;
+    }
+
+    .main__title{
+      padding: 0;
+    }
+    .main__title2{
+      padding: 0;
+    }
+    .summary{
+      padding: 10px 10px 0px 0px;
+    }
+    .summary2{
+      padding: 20px 10px 0px 0px;
+    }
+
+    
+
+    .main2__row{
+      flex-direction: column;
+      padding: 0;
+      padding-left: 10px;
+    }
+    .main2__title {
+      padding: 0;
+    }
+
+    .main3__row{
+      flex-direction: column;
+      padding-left: 10px;
+  }
+    
+    .main3__title{
+      padding: 0;
+    }
+
+    .main4__row{
+      flex-direction: column;
+      padding-left: 10px;
+    }
+    .main4__title{
+      padding: 0;
+    }
+
+}
