--- a/style.css
+++ b/style.css
@@ -36,10 +36,7 @@
   img{vertical-align: top;}
   
   h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
-  
-  html {
-    scroll-behavior: smooth; 
-  }
+
 
   body{
     font-family: Arial, "Helvetica-Neue", Helvetica, sans-serif;
@@ -59,9 +56,6 @@
   .container {
     max-width: 1440px;
     margin: 0 auto;
-  }
-
-   nav {
   }
 
   .nav-list {
@@ -104,13 +98,9 @@
   }
 
   .sasha__image {
-    padding: 20px 0px 0px 80px;
+    padding: 20px 0px 0px 120px;
   }
   
-  .image{
-    
-  }
-
   .sasha__image img {
     max-width: 200px;
     border-radius: 100px;
@@ -125,8 +115,7 @@
   .title {
     display: flex;
     align-items: center;
-    
-    padding: 50px 0px 0px 40px;
+    padding: 50px 0px 0px 100px;
   }
 
   .sasha__name{
@@ -185,13 +174,7 @@
     max-width: 13px;
   }
 
-  .main__title1{
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    color: #ffffff;
-   
-  }
+
 
   .main__title2{
     display: flex;
@@ -199,19 +182,19 @@
     flex-grow: 1;
   }
    
-  .title2{
+  .title3{
     display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
+    align-items: center;
   }
 
   .summary{
-    padding: 0px 0px 20px 10px;
+    padding: 0px 130px 20px 0px;
     font-size: 18px;
   }
 
+
   .summary2{
-    padding: 0px 0px 0px 10px;
+    padding: 0px 0px 0px 150px;
     font-size: 14px;
     color: #2F4F4F;
   }
@@ -226,7 +209,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 0px 0px 0px;
+    padding: 80px 0px 0px 0px;
   }
 
   .block2__title{
@@ -247,9 +230,9 @@
   .main2{}
   
   .main2__row{
-    margin: 20px 0px 0px 0px;
     display: flex;
     justify-content: space-between;
+    padding: 20px 0px 0px 0px;
   }
 
   .main2__title{
@@ -281,32 +264,24 @@
     color: #2F4F4F;
   }
 
-
-  .main2__title1{
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    color: #ffffff;
-  }
-
   .main2__title2{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
   }
 
-  .title2{
+  .title4{
     display: flex;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .code{
+    padding: 0px 140px 0px 0px;
     font-size: 18px;
   }
 
   .code2{
-    padding: 0px 0px 10px 0px;
-    text-align: start;
+    padding: 0px 0px 20px 160px;
     font-size: 14px;
     line-height: 20px;
     color: #2F4F4F;
@@ -318,7 +293,6 @@
   .block3__row{
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
 
   .block3__title{
@@ -343,14 +317,14 @@
   .main3__row{
     display: flex;
     justify-content: space-between;
+    padding: 20px 0px 20px 0px;
   } 
 
   .main3__title{
-    padding: 0px 0px 0px 50px;
+    padding: 0px 0px 0px 40px;
   }
 
   .main3__courses{
-    padding: 20px 0px 0px 0px;
     font-size: 18px;
   }
 
@@ -375,19 +349,24 @@
   }
 
   .main3__title2{
-    padding: 20px 0px 0px 0px;
-    max-width: 625px;
-    height: 180px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .title5{
+    display: flex;
+    align-items: center;
   }
 
   .projects{
+    padding: 0px 0px 0px 80px;
     font-size: 18px;
   }
  
 
   .projects2{
-    padding: 15px 0px 0px 0px;
-    text-align: start;
+    padding: 15px 0px 0px 150px;
     font-size: 14px;
     line-height: 20px;
     color: #2F4F4F;
@@ -403,7 +382,7 @@
   .block4__row{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    padding: 100px 0px 0px 0px;
   }
 
   .block4__title{
@@ -426,10 +405,11 @@
   .main4__row{
     display: flex;
     justify-content: space-between;
+    padding: 20px 0px 120px 0px;
   } 
 
   .main4__title{
-    padding: 20px 0px 0px 50px;
+    padding: 0px 0px 0px 40px;
   }
 
   .main4__education{
@@ -447,25 +427,31 @@
   }
 
   .main4__title2{
-    padding: 20px 0px 0px 0px;
-    max-width: 625px;
-    height: 180px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .title6{
+    display: flex;
+    align-items: center;
   }
 
   .english{
     font-size: 18px;
+    padding-right: 80px;
   }
  
 
   .english2{
-    padding: 15px 0px 0px 0px;
+    padding: 20px 10px 0px 0px;
     text-align: start;
     font-size: 14px;
     line-height: 20px;
     color: #2F4F4F;
   }
 
-  .projects2 span{
+  .english2 span{
     font-weight: bold;
   }
 
@@ -536,14 +522,15 @@
   
   @media (max-width:767px){
      
+    .nav-list li a {
+      font-size: 14px;
+    }
     .sasha__row {  
       flex-direction: column;
-  
     }
     .sasha__image {
       padding: 20px 0px 0px 20px;
     }
-
     .sasha__title {
       padding: 10px 0px 0px 10px;
     }
@@ -563,15 +550,16 @@
       flex-direction: column;
       padding-left: 10px;
     }
-
     .main__title{
       padding: 0;
     }
     .main__title2{
+      display: flex;
+      align-items: flex-start;
       padding: 0;
     }
     .summary{
-      padding: 10px 10px 0px 0px;
+      padding: 40px 10px 0px 0px;
     }
     .summary2{
       padding: 20px 10px 0px 0px;
@@ -581,28 +569,58 @@
 
     .main2__row{
       flex-direction: column;
-      padding: 0;
       padding-left: 10px;
     }
-    .main2__title {
+    .main2__title{
       padding: 0;
     }
+    .main2__title2{
+      display: flex;
+      align-items: flex-start;
+      padding: 0;
+    }
+    .code{
+      padding: 30px 0px 0px 0px;
+    }
+    .code2{
+     padding: 0;
+    }
+    
 
     .main3__row{
       flex-direction: column;
       padding-left: 10px;
-  }
-    
+    }
     .main3__title{
       padding: 0;
     }
+    .main3__title2{
+      display: flex;
+      align-items: flex-start;
+      padding: 40px 0px 0px 0px;
+    }
+    .projects{
+      padding: 0;
+    }
+    .projects2{
+      padding: 0;
+      padding-top: 10px;
+    }
+  
 
+   
+   
     .main4__row{
       flex-direction: column;
       padding-left: 10px;
     }
     .main4__title{
       padding: 0;
+    }
+    .main4__title2{
+      display: flex;
+      align-items: flex-start;
+      padding: 40px 0px 0px 0px;
     }
 
 }
